--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -7,6 +7,7 @@
   .Phase-Events-Container {
     background: #FFFFFF;
     width: calc(100% - 975px);
+    max-width: 225px;
     height: 548px;
     overflow-y: auto;
   }
