--- a/app/components/Report/ReportScore/style.scss
+++ b/app/components/Report/ReportScore/style.scss
@@ -25,3 +25,23 @@
     line-height: 19px;
     margin-top: 26px;
   }
+
+.score-message {
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  letter-spacing: 0;
+  line-height: 24px;
+  text-align: center;
+}
+.score-subtitle {
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19px;
+  text-align: center;
+  margin-top: 8px !important;
+}
