checlist data box for video

--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -11,4 +11,47 @@
     height: 548px;
     overflow-y: auto;
   }
+  .briefing-analysis {
+    padding: 24px 40px;
+  }
+
+  .checklist-data {
+    font-size: 18px;
+    line-height: 24px;
+    padding: 24px 40px;
+    width: 736px;
+    margin-top: 40px;
+    h3 {
+      font-size: 26px;
+      line-height: 36px;
+      margin: 0px 0px 4px 0px;
+    }
+    h5 {
+      font-size: 14px;
+      line-height: 19px;
+      margin: 0px 0px 24px 0px;
+    }
+  }
+  .checklist-data-container {
+    margin-bottom: 24px;
+  }
+  .checklist-data-title {
+    font-weight: bold;
+    margin-bottom: 8px
+  }
+  .checklist-data-value {
+    color: #FF0000;
+  }
+  .checklist-data-list {
+    margin: 0px;
+    font-size: 12px;
+    line-height: 17px;
+    div {
+      margin-bottom: 8px;
+    }
+    span {
+      font-weight: bold;
+      color: #FF0000;
+    }
+  }
 }
