checkbox to filter events to only thos with AE

--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseEvents/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseEvents/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../styles/global-styles';
-
+.show-only-ae {
+  font-size: 14px;
+  line-height: 19px;
+  opacity: 0.8;
+}
 .phase-events-title {
   border-bottom: 1px solid #F3F3F3;
   padding: 16px;
