--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -88,3 +88,27 @@ $ssc-picker-height: 150px;
 .ssc.Modal{
     padding: 0;
 }
+
+
+.no-data {
+    opacity: 0.8;
+    color: #000000;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 24px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 8px;
+  }
+  
+  .no-data-subtitle {
+    opacity: 0.8;
+    color: #000000;
+    font-family: "Noto Sans";
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
+    text-align: center;
+    margin-bottom: 24px;
+  }
