--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -10,7 +10,7 @@ $paddingSize: 40px;
   text-align: center;
   padding: $paddingSize;
   border-radius: 8px;
-  h2 {
+  .Section-Title {
     margin: 0px;
     font-size: 26px;
     color: #000;
@@ -22,5 +22,29 @@ $paddingSize: 40px;
   @include flex-center;
   & > div {
     width: calc(100% / 3);
+  }
+}
+
+hr { margin: 24px 0px; }
+
+.checklist-status {
+  font-size: 14px;
+  line-height: 19px;
+  div { flex-grow: 1; }
+  .checklist-happened {
+    text-align: left;
+    .title {
+      color: #028CC8;
+      margin-bottom: 4px;
+    }
+    .subtitle {
+      opacity: 0.6;
+      color: #000;
+    }
+  }
+  .checklist-missed {
+    text-align: right;
+    margin-top: 23px;
+    opacity: 0.8;
   }
 }
