--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -142,6 +142,12 @@ Button.primary {
   border-radius: 25px;
 }
 
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .Modal {
   top: 50%;
   left: 50%;
