Add no data modal quality score

--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -86,3 +86,21 @@
   line-height: 24px;
 }
 
+.list-subtitle-no-data{
+  color: #004F6E;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 0;
+  line-height: 24px;
+  text-align: right;
+}
+
+.checklistdetail .list-text{
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  letter-spacing: 0;
+  line-height: 24px;
+}
