--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -27,6 +27,30 @@ $paddingSize: 40px;
 
 hr { margin: 24px 0px; }
 
+.Case-Information {
+  margin-top: 24px;
+  .case-info-heading {
+    font-size: 14px;
+    line-height: 19px;
+    margin-bottom: 4px;
+  }
+  .case-info-details {
+    font-size: 18px;
+    line-height: 24px;
+    color: #004F6E;
+    margin-bottom: 24px;
+    &.specialty {
+      margin-bottom: 4px;
+    }
+    &.procedure {
+      font-size: 14px;
+      line-height: 19px;
+      color: #000000;
+      opacity: 0.6;
+    }
+  }
+}
+
 .checklist-status {
   font-size: 14px;
   line-height: 19px;
