https://surgicalsafety.atlassian.net/browse/INSSC-26 Add new No data View

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -78,6 +78,13 @@ $ssc-picker-height: 150px;
   line-height: 36px;
   text-align: center;
 }
+.ssc-message-subtitle{
+    font-family: "Noto Sans";
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 24px;
+    text-align: center;
+}
 
 .chart-title{
     font-size: 26px;
