https://surgicalsafety.atlassian.net/browse/INSSC-155 fix padding issues

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -57,6 +57,10 @@ $ssc-picker-height: 150px;
     letter-spacing: 0;
     line-height: 36px;
   }
+.ssc-card .InfographicText{
+    display: flex;
+    align-items: center;
+}
 .ssc-picker-container{
     position: absolute;
     width: calc(100% - #{$nav-width});
