--- a/app/components/Report/ReportScore/style.scss
+++ b/app/components/Report/ReportScore/style.scss
@@ -6,7 +6,7 @@
     font-size: 26px;
     letter-spacing: 0;
     line-height: 36px;
-    margin: auto;
+    margin-top: 16px !important;
   }
 
 
@@ -16,6 +16,7 @@
     letter-spacing: 0;
     line-height: 138px;
     text-align: center;
+    margin: 8px 0 !important;
   }
 
   .report-score .link {
@@ -23,7 +24,8 @@
     font-size: 14px;
     letter-spacing: 0;
     line-height: 19px;
-    margin-top: 26px;
+    margin-top: 18px;
+    // margin-bottom: 16px;
   }
 
 .score-message {
