--- a/app/containers/EMMReports/EMMPhaseAnalysis/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/style.scss
@@ -3,7 +3,7 @@
 $paddingSize: 40px;
 
 .Emm-Phases {
-  padding-top: $paddingSize;
+  padding: $paddingSize 0px;
   h1, h2 {
     font-size: 42px;
     color: #000000;
