--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -12,7 +12,8 @@
         top: 24px;
         right: 24px;
         font-size: 14px;
-        color: #000
+        color: #000;
+        z-index: 99;
     }
     .main-text {
         opacity: 0.8;
