--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -100,3 +100,7 @@
   border-radius: 4px;
   background-color: rgba(97, 97, 97, 0.9);
 }
+
+.stacked-barchart-detailed .c3-axis-y-label{
+  transform: translate(-8px, 10px) rotate(-90deg);
+}
