https://surgicalsafety.atlassian.net/browse/INSSC-44 address multiple issues with Checklist

--- a/app/components/Report/ReportScore/style.scss
+++ b/app/components/Report/ReportScore/style.scss
@@ -47,3 +47,9 @@
   text-align: center;
   margin-top: 8px !important;
 }
+.no-data-score{
+  min-height: 156px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
