--- a/app/components/Report/Checklist/style.scss
+++ b/app/components/Report/Checklist/style.scss
@@ -55,7 +55,6 @@
     font-style: italic;
     letter-spacing: 0;
     line-height: 24px;
-    margin-top: 16px !important;
 }
 .checklist .link{
   color: #00AAD9;
@@ -63,4 +62,7 @@
   font-size: 12px;
   letter-spacing: 0;
   line-height: 17px;
+}
+.checklist .no-data{
+  margin-top: 0 !important;
 }
