--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -19,7 +19,6 @@
   color: #005979;
   font-family: "Noto Sans";
   font-size: 18px;
-  font-weight: bold;
   letter-spacing: 0;
   line-height: 24px;
   text-align: right;
@@ -28,6 +27,7 @@
 
 .checklistdetail .top-item{
   color: #FF0000;
+  font-weight: bold;
 }
 .checklistdetail .complete-item{
   opacity: .3;
@@ -46,7 +46,6 @@
   color: #004F6E;
   font-family: "Noto Sans";
   font-size: 18px;
-  font-weight: bold;
   letter-spacing: 0;
   line-height: 24px;
   text-align: right;
@@ -56,7 +55,6 @@
   opacity: 0.8;
   font-family: "Noto Sans";
   font-size: 12px;
-  font-weight: bold;
   letter-spacing: 0;
   line-height: 17px;
 }
@@ -65,7 +63,6 @@
   opacity: 0.8;
   font-family: "Noto Sans";
   font-size: 14px;
-  font-weight: bold;
   letter-spacing: 0;
   line-height: 19px;
   text-align: right;
@@ -75,6 +72,7 @@
 }
 .checklistdetail .ssc-divider{
   margin: 4px 0 25px 0;
+  color: #EAEAEA;
 }
 
 .checklistdetail .display-text{
@@ -103,4 +101,11 @@
   font-size: 18px;
   letter-spacing: 0;
   line-height: 24px;
+}
+
+.checklistdetail .close-button{
+  padding-top: 0;
+}
+.checklistdetail .close-button:hover{
+  background-color: unset;
 }
