https://surgicalsafety.atlassian.net/browse/INSSC-44 update ordering

--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -72,7 +72,7 @@
 }
 .checklistdetail .ssc-divider{
   margin: 4px 0 25px 0;
-  color: #EAEAEA;
+  background-color: #EAEAEA;
 }
 
 .checklistdetail .display-text{
