https://surgicalsafety.atlassian.net/browse/INSSC-10 fix scroll bug

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -4,7 +4,7 @@ $ssc-picker-height: 150px;
 
 .ssc-page{
     background-color: #F5F5F5;
-    height: calc(100% + #{$ssc-picker-height});
+    height: calc(100%);
 }
 .ssc-page .overlay{
     top: $ssc-picker-height;
