--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -106,6 +106,7 @@ hr { margin: 24px 0px; }
     line-height: 24px;
     margin-bottom: 8px;
     color: #028CC8;
+    cursor: pointer;
   }
   .phase-event {
     font-size: 14px;
