--- a/app/components/UniversalPicker/style.scss
+++ b/app/components/UniversalPicker/style.scss
@@ -11,6 +11,7 @@
     font-size: 14px !important;
     line-height: 19px !important;
 }
+.universal-picker .all-days,
 .universal-picker .all-specialties .MuiAutocomplete-input,
 .universal-picker .all-procedures .MuiAutocomplete-input,
 .universal-picker .all-ors .MuiAutocomplete-input{
