--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -91,7 +91,8 @@
 
 .stacked-barchart-detailed .chartTooltip{
   color: #fff;
-  padding: 4px 8px;
+  padding: 16px;
+  text-align: left;
   font-size: 0.625rem;
   max-width: 300px;
   word-wrap: break-word;
