--- a/app/components/Report/BarChart/style.scss
+++ b/app/components/Report/BarChart/style.scss
@@ -63,7 +63,8 @@
 
 .bar-chart .tooltip{
   color: #fff;
-  padding: 4px 8px;
+  padding: 16px;
+  text-align: left;
   font-size: 0.625rem;
   max-width: 300px;
   word-wrap: break-word;
