https://surgicalsafety.atlassian.net/browse/INSSC-184 update font size and font family

--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -93,12 +93,12 @@
   color: #fff;
   padding: 16px;
   text-align: left;
-  font-size: 0.625rem;
+  font-size: 14px;
   max-width: 300px;
   word-wrap: break-word;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: "Noto Sans";
   font-weight: 500;
-  line-height: 1.4em;
+  line-height: 19px;
   border-radius: 4px;
   background-color: rgba(97, 97, 97, 0.9);
 }
