--- a/app/components/Report/BarChartDetailed/style.scss
+++ b/app/components/Report/BarChartDetailed/style.scss
@@ -86,12 +86,12 @@
 .bar-chart-detailed .tooltip{
   color: #fff;
   padding: 16px;
-  font-size: 0.625rem;
+  font-size: 14px;
   max-width: 300px;
   word-wrap: break-word;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 500;
-  line-height: 1.4em;
+  font-family: "Noto Sans";
+  font-weight: 500 !important;
+  line-height: 19px;
   border-radius: 4px;
   background-color: rgba(97, 97, 97, 0.9);
 }
