--- a/app/components/Report/BarChart/style.scss
+++ b/app/components/Report/BarChart/style.scss
@@ -69,7 +69,7 @@
   max-width: 300px;
   word-wrap: break-word;
   font-family: "Noto Sans";
-  font-weight: 500;
+  font-weight: 500 !important;
   line-height: 19px;
   border-radius: 4px;
   background-color: rgba(97, 97, 97, 0.9);
