--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -3,6 +3,10 @@
 .Emm-Phase-Video-Container {
   .phase-video {
     width: 975px;
+    .azuremediaplayer {
+      width: 100%;
+      height: 100%;
+    }
   }
   .Phase-Events-Container {
     background: #FFFFFF;
