no video message

--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -19,6 +19,11 @@
     padding: 24px 40px;
   }
 
+  .no-data-container {
+    margin-top: 24px;
+    opacity: 0.8;
+  }
+
   .checklist-data {
     font-size: 18px;
     line-height: 24px;
