--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -5,7 +5,7 @@
     width: 975px;
     .azuremediaplayer {
       width: 100%;
-      height: 100%;
+      height: calc(100% - 30px)
     }
   }
   .Phase-Events-Container {
@@ -68,6 +68,7 @@
     height: 30px;
     background: #FFFFFF;
     width: 975px;
+    border-right: 1px solid #F3F3F3;
     .time-line-marker {
       cursor: pointer;
       top: 5px;
