more fixes to ensure video stays the same size

--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -5,7 +5,8 @@
     width: 975px;
     .azuremediaplayer {
       width: 100%;
-      height: calc(100% - 30px)
+      height: 548px;
+      padding: 0px;
     }
   }
   .Phase-Events-Container {
