https://surgicalsafety.atlassian.net/browse/INSSC-187 disable apply button when filters have been applied

--- a/app/components/UniversalPicker/style.scss
+++ b/app/components/UniversalPicker/style.scss
@@ -17,3 +17,7 @@
 .universal-picker .all-ors .MuiAutocomplete-input{
     opacity: .4;
 }
+.universal-picker .MuiButton-root.Mui-disabled{
+    color: #ffffff;
+    opacity: .3;
+}
