--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -35,6 +35,12 @@
         width: 200px;
         left: 0px;
     }
+    .publish-button {
+        padding: 8px 16px;
+        font-size: 18px;
+        line-height: 24px;
+    }
+    &.has-publish-button { height: 96px; }
 }
 
 .EMM-Tab-Selector {
