--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -158,6 +158,7 @@ Button.primary {
   position: absolute;
   box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
   background-color: #fff;
+  border-radius: 4px;
   h5 {
     font-size: 1.5rem;
     margin: 0px;
