--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -203,5 +203,9 @@ $ssc-picker-height: 150px;
     font-size: 20px;
     margin-right: 4px;    
     transform: translate(2px,2px) rotate(90deg);
-    
+}
+.sscOnboard-link{
+    position: absolute;
+    top: 26px;
+    left: 40px;
 }
