--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -198,6 +198,9 @@ $ssc-picker-height: 150px;
 .sscOnboarding .close-button{
     padding-top: 0;
 }
+.sscOnboarding .close-button:hover{
+    background-color: unset;
+  }
 .sscOnboard-hex{
     display: inline-block;
     font-size: 20px;
