--- a/app/containers/EMMCases/style.scss
+++ b/app/containers/EMMCases/style.scss
@@ -20,3 +20,20 @@
 .pointer {
     cursor: pointer;
 }
+
+.EMM-CASES {
+    .open-report {
+        background: #F3F3F3;
+        border: #F3F3F3;
+        padding: 8px 16px;
+        font-size: 18px;
+        line-height: 24px;
+        color: #000000;
+        span { opacity: 0.8; }
+    }
+    span.in-progress {
+        font-size: 14px;
+        line-height: 19px;
+        opacity: 0.8;
+    }
+}
