--- a/app/containers/EMMReports/EMMOverview/style.scss
+++ b/app/containers/EMMReports/EMMOverview/style.scss
@@ -88,7 +88,6 @@ hr {
 
 .Phases-Of-Interests-Container {
   margin-top: 24px;
-  justify-content: center;
   .phase-of-interest {
     margin: 0px 15px;
     flex: 1;
@@ -108,6 +107,7 @@ hr {
     }
   }
   .phase-title {
+    text-align: left;
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 8px;
