--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -14,9 +14,14 @@
     line-height: 24px !important;
 }
 
+.EMM-REPORTS-SCROLL {
+    height: 100%;
+    overflow-y: auto;
+}
+
 .EMM-REPORTS {
-    padding: 24px 120px;
-    max-width: 1920px;
+    padding: 24px 40px;
+    max-width: 1440px;
     margin: 0px auto;
     overflow-y: auto;
     font-size: 18px;
@@ -24,7 +29,7 @@
         cursor: pointer;
         position: absolute;
         top: 24px;
-        right: 24px;
+        right: 40px;
         font-size: 14px;
         color: #000;
         z-index: 99;
@@ -75,11 +80,5 @@
             background: $blue;
             font-weight: bold;
         }
-    }
-}
-
-@media (max-width: $desktop-width) {
-    .EMM-REPORTS {
-        padding: 24px 60px;
     }
 }
