--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -1,8 +1,6 @@
 @import '../../../../styles/global-styles.scss';
 
-$video-width: 1110px;
 $video-height: 625px;
-
 $sidebar-width: 250px;
 
 .Emm-Phase-Video-Container {
@@ -20,7 +18,6 @@ $sidebar-width: 250px;
   }
   .Phase-Events-Container {
     background: #FFFFFF;
-    // width: calc(100% - #{$video-width});
     width: $sidebar-width;
     max-width: 250px;
     height: $video-height;
@@ -78,7 +75,7 @@ $sidebar-width: 250px;
   .Video-Timeline {
     height: 30px;
     background: #FFFFFF;
-    width: $video-width;
+    width: 100%;
     border-right: 1px solid #F3F3F3;
     .current-video-time {
       background: red;
