https://surgicalsafety.atlassian.net/browse/INEFF-15 Adjust maxRange logic

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -19,9 +19,13 @@ $ssc-picker-height: 150px;
 .efficiency-divider {
     background-color: #C8C8C8;
 }
+.efficiency-range-picker{
+    background-color: #E8E8E8;
+    padding: 16px 0 0 0;
+}
 .efficiency-picker {
     background-color: #E8E8E8;
-    padding-top: 16px;
+    padding: 16px;
 }
 
 .efficiency-card.MuiCard-root{
