--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -59,6 +59,14 @@ $onboardwidth: 875px;
     .MuiPaper-root {
         padding: 16px;
     }
+    h2 {
+        opacity: 0.8;
+    }
+    .confirm-publish-text {
+        font-size: 14px;
+        color: black;
+        opacity: 0.8;
+    }
     .cancel-publish {
         color: #028CC8 !important;
     }
