Update month styling

--- a/app/components/MonthRangePicker/style.scss
+++ b/app/components/MonthRangePicker/style.scss
@@ -24,7 +24,9 @@
       }
     .DateRangePickerInput *{
         font-family: "Noto Sans" !important;
-        color: #000000;
+    }
+    .DateInput{
+        width: 135px !important;
     }
 
     .DateRangePickerInput_arrow_svg{
