style update when ss checklist has perfect score

--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -70,6 +70,12 @@ $sidebar-width: 250px;
       font-weight: bold;
       color: #FF0000;
     }
+    .no-missed-item {
+      font-weight: normal;
+      color: #004F6E;
+      font-size: 18px;
+      opacity: 1 !important;
+    }
   }
 
   .Video-Timeline {
