--- a/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
+++ b/app/containers/EMMReports/EMMPhaseAnalysis/EMMPhaseVideoContainer/style.scss
@@ -58,6 +58,9 @@ $sidebar-width: 250px;
   }
   .checklist-data-value {
     color: #FF0000;
+    &.red-text {
+      color: #FF0000 !important;
+    }
   }
   .checklist-data-list {
     margin: 0px;
