https://surgicalsafety.atlassian.net/browse/INEFF-73 Update stacked graph for horizontal legend

--- a/app/components/Report/StackedBarChart/style.scss
+++ b/app/components/Report/StackedBarChart/style.scss
@@ -68,6 +68,21 @@
 .stacked-barchart-detailed .legend-title{
   display: flex;
 }
+.stackedBarChartDetailed-horizontal {
+  margin-bottom: 24px;
+  .bar-chart-detailed-legend{
+    margin: 0;
+    flex-direction: row ;
+  }
+
+  .bar-chart-detailed-legend{
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+  }
+}
+
+
 
 .stacked-barchart-detailed .legend-title,
 .stacked-barchart-detailed .c3-axis,
