--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -1,26 +1,26 @@
-@import '../../styles/global-styles.scss';
+@import "../../styles/global-styles.scss";
 
 $ssc-picker-height: 150px;
 
-.efficiency-page{
-    background-color: #F5F5F5;
+.efficiency-page {
+    background-color: #f5f5f5;
     height: calc(100%);
-    .overlay{
+    .overlay {
         top: $ssc-picker-height;
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
     }
-    .overlay.landing-page{
+    .overlay.landing-page {
         top: calc(#{$ssc-picker-height} - 65px);
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
     }
-    .efficiency-message{
+    .efficiency-message {
         font-family: "Noto Sans";
         font-size: 26px;
         letter-spacing: 0;
         line-height: 36px;
         text-align: center;
     }
-    .efficiency-message-subtitle{
+    .efficiency-message-subtitle {
         font-family: "Noto Sans";
         font-size: 18px;
         letter-spacing: 0;
@@ -28,29 +28,29 @@ $ssc-picker-height: 150px;
         text-align: center;
     }
     .efficiency-divider {
-        background-color: #C8C8C8;
+        background-color: #c8c8c8;
     }
-    .efficiency-range-picker{
-        background-color: #E8E8E8;
+    .efficiency-range-picker {
+        background-color: #e8e8e8;
         padding: 16px 0 0 0;
     }
     .efficiency-picker {
-        background-color: #E8E8E8;
+        background-color: #e8e8e8;
         padding: 16px;
     }
-    
-    .efficiency-card.MuiCard-root{
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+
+    .efficiency-card.MuiCard-root {
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
         border-radius: 8px !important;
     }
-    
-    .efficiency-picker-container{
+
+    .efficiency-picker-container {
         position: absolute;
         width: calc(100% - #{$nav-width}) !important;
         z-index: 1300;
         top: 0;
     }
-    .efficiency-main{
+    .efficiency-main {
         padding: 40px;
         max-width: 1198px;
         margin: auto;
@@ -58,17 +58,22 @@ $ssc-picker-height: 150px;
         // position: relative;
     }
 
-    .efficiency-card.MuiCard-root{
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    .efficiency-card.MuiCard-root {
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
         border-radius: 8px !important;
     }
-    .efficiency-card.InfographicText{
+    .efficiency-card.InfographicText {
         max-width: 360px;
     }
-    
+
+    .StackedBarChart .chart-title {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+        text-align: center;
+        font-weight: unset;
+    }
 }
-
-
-
-
-
