--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -5,6 +5,13 @@ $ssc-picker-height: 150px;
 .efficiency-page {
     background-color: #f5f5f5;
     height: calc(100%);
+
+    .TurnoverTimeReport {
+        .efficiency-card.InfographicText {
+            max-width: 260px;
+        }
+    }
+
     .overlay {
         top: $ssc-picker-height;
         background-color: #f5f5f5;
@@ -75,5 +82,8 @@ $ssc-picker-height: 150px;
         line-height: 36px;
         text-align: center;
         font-weight: unset;
+    }
+    .DonutChart .MuiCardContent-root {
+        padding-bottom: 0;
     }
 }
