https://surgicalsafety.atlassian.net/browse/INEFF-71 complete donut chart visuals

--- a/app/components/Report/DonutChart/style.scss
+++ b/app/components/Report/DonutChart/style.scss
@@ -28,3 +28,26 @@
   letter-spacing: 0;
   line-height: 19px;
 }
+
+.donut-title{
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  letter-spacing: 0;
+  line-height: 24px;
+}
+.second-title {
+  color: #004F6E;
+  font-family: "Noto Sans";
+  font-size: 42px;
+  letter-spacing: 0;
+  line-height: 42px;
+}
+.donut-unit{
+  color: #004F6E;
+  font-family: "Noto Sans";
+  font-size: 18px;
+  letter-spacing: 0;
+  line-height: 42px;
+}
