--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -5,7 +5,9 @@ $ssc-picker-height: 150px;
 .efficiency-page {
     background-color: #f5f5f5;
     height: calc(100%);
-
+    .MuiCardContent-root{
+        padding:24px
+    }
     .TurnoverTimeReport {
         .efficiency-card.InfographicText {
             max-width: 260px;
