--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -5,13 +5,27 @@ $ssc-picker-height: 150px;
 .efficiency-page {
     background-color: #f5f5f5;
     height: calc(100%);
-    .MuiCardContent-root{
-        padding:24px
+    .MuiCardContent-root {
+        padding: 24px;
     }
     .TurnoverTimeReport {
         .efficiency-card.InfographicText {
             max-width: 260px;
         }
+    }
+    .efficiency-card.Table{
+        .MuiCardContent-root{
+            padding: 0;
+        }
+    }
+    .efficiency-select-filter {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 18px;
+        letter-spacing: 0;
+        line-height: 24px;
+        text-align: center;
     }
 
     .overlay {
@@ -61,7 +75,7 @@ $ssc-picker-height: 150px;
     }
     .efficiency-main {
         padding: 40px;
-        max-width: 1198px;
+        max-width: 1230px;
         margin: auto;
         top: $ssc-picker-height;
         // position: relative;
