--- a/app/components/Report/BarChart/style.scss
+++ b/app/components/Report/BarChart/style.scss
@@ -1,92 +1,90 @@
-@import '../../../styles/global-styles';
+@import "../../../styles/global-styles";
 
-.bar-chart .chart-title{
-  font-size: 26px;
-  letter-spacing: 0;
-  line-height: 36px;
-  margin-bottom: 16px !important;
-}
-
-.bar-chart  .chart-subtitle{
-  font-size: 14px;
-  font-style: italic;
-  letter-spacing: 0;
-  line-height: 19px;
-  margin-bottom: 32px !important;
-}
-.chart-score{
-  color: #005979;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-  text-align: right;
-}
-.bar-chart{
+.bar-chart {
   text-align: center;
-}
+  min-height: 150px;
+  .chart-title {
+    font-size: 26px;
+    letter-spacing: 0;
+    line-height: 36px;
+    margin-bottom: 16px !important;
+  }
+  .chart-subtitle {
+    font-size: 14px;
+    font-style: italic;
+    letter-spacing: 0;
+    line-height: 19px;
+    margin-bottom: 32px !important;
+  }
+  .chart-score {
+    color: #005979;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
+    text-align: right;
+  }
 
-.bar-chart .c3-axis .tick line{
-  opacity: 0;
-}
+  .c3-axis .tick line {
+    opacity: 0;
+  }
+  .c3-text {
+    fill: #004f6e !important;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+  .c3-axis,
+  .c3-axis-y-label,
+  .c3-axis-x-label {
+    font-family: "Noto Sans";
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 19px;
+  }
+  .c3-axis-x .tick {
+    font-weight: bold;
+  }
 
-.bar-chart .c3-text{
-  fill: #004F6E !important;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-weight: bold;
-  letter-spacing: 0;
-  line-height: 24px;
-}
-.bar-chart .c3-axis,
-.c3-axis-y-label,
-.c3-axis-x-label {
-  font-family: "Noto Sans";
-  font-size: 14px;
-  letter-spacing: 0;
-  line-height: 19px;
-}
-.c3-axis-x .tick{
-  font-weight: bold;
-}
-.bar-chart .c3 path, 
-.bar-chart .c3 line,
-.bar-chart .c3-xgrid,
-.bar-chart .c3-ygrid{
-  stroke-dasharray: unset;
-  stroke: #EAEAEA;
-}
-.bar-chart .c3-xgrid-focus{
-  visibility: hidden !important;
-}
-
-.bar-chart .tooltip{
-  color: #fff;
-  padding: 16px;
-  text-align: left;
-  font-size: 14px;
-  max-width: 300px;
-  word-wrap: break-word;
-  font-family: "Noto Sans";
-  font-weight: 500 !important;
-  line-height: 19px;
-  border-radius: 4px;
-  background-color: rgba(97, 97, 97, 0.9);
-}
-
-.bar-chart .display-text{
-  color: #004F6E;
-  font-family: "Noto Sans";
-  font-size: 18px;
-  font-style: italic;
-  letter-spacing: 0;
-  line-height: 24px;
-}
-.bar-chart .c3-axis-y .tick:nth-child(odd),
-.bar-chart .c3-ygrid:nth-child(even){
-  opacity: 0 !important;
-}
-.bar-chart .c3-axis-y-label{
-  transform: translate(-8px, 10px) rotate(-90deg);
+  .c3 path,
+  .c3 line,
+  .c3-xgrid,
+  .c3-ygrid {
+    stroke-dasharray: unset;
+    stroke: #eaeaea;
+  }
+  .c3-xgrid-focus {
+    visibility: hidden !important;
+  }
+  .tooltip {
+    color: #fff;
+    padding: 16px;
+    text-align: left;
+    font-size: 14px;
+    max-width: 300px;
+    word-wrap: break-word;
+    font-family: "Noto Sans";
+    font-weight: 500 !important;
+    line-height: 19px;
+    border-radius: 4px;
+    background-color: rgba(97, 97, 97, 0.9);
+  }
+  .display-text {
+    color: #004f6e;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-style: italic;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+  .c3-axis-y .tick:nth-child(odd),
+  .c3-ygrid:nth-child(even) {
+    opacity: 0 !important;
+  }
+  .c3-axis-y-label {
+    transform: translate(-8px, 10px) rotate(-90deg);
+  }
 }
