https://surgicalsafety.atlassian.net/browse/INEFF-79 https://surgicalsafety.atlassian.net/browse/INEFF-71 No data view for Donut

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -13,7 +13,7 @@ $ssc-picker-height: 150px;
     }
     .TurnoverTimeReport {
         .efficiency-card.InfographicText {
-            max-width: 260px;
+            // max-width: 260px;
         }
     }
     .DaysStartingOnTimeReport {
