--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -10,6 +10,7 @@ $ssc-picker-height: 150px;
     }
     .efficiency-card.InfographicText {
         max-width: fit-content;
+        min-width: 260px;
     }
     .TurnoverTimeReport {
         .efficiency-card.InfographicText {
